Add swagger default config. get path params working.
