# lib/lib.js
@@ -11,13 +11,19 @@ const youTubeAudioProcessor = require('./services/youTubeAudioProcessor')
 
 function getOrCreateSongRequest(spotifyID) {
   return new Promise((resolve, reject) => {
+    if (!spotifyID) return reject(new Error('spotifyID not included'))
     // first search songRequest
     db.getSongRequestWithSpotifyID(spotifyID)
       .then(songRequest => resolve(songRequest))
       .catch(err => {
         if (err.message !== errors.SONG_REQUEST_DOES_NOT_EXIST) return reject(err)
         // check if song already exists
+
         Song.findOne({ 'spotifyInfo.id': spotifyID }, function (err, song) {
+          console.log('findOne')
+          console.log('err', err)
+          console.log('song', song)
+          console.log('spotifyID', spotifyID)
           if (err) {
             console.log(err)
             return rject(err)
